refactor(LoginScreen): 修改 LoginScreen.kt 的功能和結構
- 將 `currentDialog` 變量的類型修改為非空的 `@Composable () -> Unit` 類型。
- 修改 `AccountField` 和 `PasswordField`，使帳號與密碼只能輸入單行。
- 重命名 `RememberPasswordSwitch` 為 `AutoLoginSwitch`，更明確地反映其功能。
- 在 `AccountField` 中將 `isPasswordVisible` 參數名稱改為 `isAccountVisible`。
- 將帳號與密碼的提示文字改為從 `R.String` 中獲取，而不是硬編碼。
- 調整 `AccountField`、`PasswordField`、`LoginButton` 等 Composable，它們現在不直接依賴 `viewModel`，而是通過參數接收所需數據。
- 為所有 Composable 方法添加 modifier 參數

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">lin_li_tranimg</string>
+    <string name="account_label">\"CMoney帳號 (手機號碼或email)\"</string>
+    <string name="password_label">\"密碼\"</string>
 </resources>
