--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">lin_li_tranimg</string>
     <string name="account_label">\"CMoney帳號 (手機號碼或email)\"</string>
     <string name="password_label">\"密碼\"</string>
+    <string name="login">登入</string>
 </resources>
