feat: 增加字串資源 - 增加返回的字串

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,5 @@
     <string name="loading">登入中…請您稍候</string>
     <string name="login_successful">登入成功</string>
     <string name="login_failed">登入失敗</string>
+    <string name="back">返回</string>
 </resources>
